localization/v2.5.x/site/ar/integrations/integrations_overview.md
---
id: integrations_overview.md
summary: >-
  توفر لك هذه الصفحة قائمة من البرامج التعليمية للتفاعل مع Milvus وأدوات الطرف
  الثالث.
title: نظرة عامة على عمليات التكامل
---

<h1 id="Integrations-Overview" class="common-anchor-header">نظرة عامة على عمليات التكامل<button data-href="#Integrations-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>توفر لك هذه الصفحة قائمة من البرامج التعليمية للتفاعل مع Milvus وأدوات الطرف الثالث.</p>
<table>
<thead>
<tr><th>البرنامج التعليمي</th><th>حالة الاستخدام</th><th>الشركاء أو المكدسات</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_llamaindex.md">RAG مع ميلفوس وLlamaIndex</a></td><td>RAG</td><td>ميلفوس، لاما إندكس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_langchain.md">RAG مع Milvus وLangChain</a></td><td>RAG</td><td>ميلفوس، لانغشين</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/milvus_hybrid_search_retriever.md">مسترجع البحث الهجين ميلفوس في مسترجع البحث الهجين في لانجتشين</a></td><td>البحث الهجين</td><td>ميلفوس، لانغتشين</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/basic_usage_langchain.md">استخدام ميلفوس كمخزن متجه في لانغتشين</a></td><td>البحث الدلالي</td><td>ميلفوس، لانجتشين</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/full_text_search_with_langchain.md">استخدام البحث عن النص الكامل مع لانغ تشين وميلفوس</a></td><td>البحث عن النص الكامل</td><td>ميلفوس، لانجتشين</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_haystack.md">RAG مع ميلفوس وميلفوس وهايستاك</a></td><td>RAG</td><td>ميلفوس، هايستاك</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/llamaindex_milvus_async.md">RAG مع ميلفوس وLlamaIndex Async API</a></td><td>المزامنة</td><td>ميلفوس، لاما إندكس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/milvus_rag_with_vllm.md">بناء RAG باستخدام Milvus وvLLLM وLama 3.1</a></td><td>RAG</td><td>ميلفوس و vLLLM و LlamaIndex</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/llamaindex_milvus_full_text_search.md">استخدام البحث عن النص الكامل مع LlamaIndex و Milvus</a></td><td>البحث عن النص الكامل</td><td>ميلفوس، لاما إندكس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/dify_with_milvus.md">نشر Dify مع ميلفوس</a></td><td>النشر</td><td>ميلفوس، ديفاي</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/rag_with_langflow.md">بناء نظام RAG باستخدام لانجفلو مع ميلفوس</a></td><td>أوتشستراتيشن</td><td>ميلفوس، لانجفلو</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/use_milvus_in_private_gpt.md">استخدام ميلفوس في PrivateGPT</a></td><td>أوتشستريشن</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/use_milvus_in_docsgpt.md">استخدام Milvus في DocsGPT</a></td><td>أوتشستريشن</td><td>DocsGPT، ميلفوس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/use_milvus_with_sambanova.md">استخدام Milvus مع SambaNova</a></td><td>التنسيق</td><td>ميلفوس، سامبا نوفا</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/milvus_rag_with_dynamiq.md">بدء الاستخدام مع ديناميك وميلفوس</a></td><td>التنسيق</td><td>ميلفوس، ديناميك</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/llama_stack_with_milvus.md">بناء RAG مع مكدس لاما مع ميلفوس</a></td><td>التنسيق</td><td>ميلفوس، لاما ستاك</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_memgpt.md">وكيل روبوت المحادثة مع Milvus وMemGPT</a></td><td>الوكيل</td><td>ميلفوس وMemGPT</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/llama_agents_metadata.md">أنظمة متعددة الوكلاء مع ميسترال للذكاء الاصطناعي وميلفوس و Llama-agents</a></td><td>الوكيل</td><td>ميلفوس و ميسترال للذكاء الاصطناعي و لاما إندكس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/quickstart_mem0_with_milvus.md">الشروع في العمل مع ميم0 وميلفوس</a></td><td>الوكلاء</td><td>ميم0، ميلفوس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_agno.md">دمج ميلفوس مع أجنو</a></td><td>الوكلاء</td><td>ميلفوس وأجنو</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/milvus_and_mcp.md">MCP + ميلفوس: ربط الذكاء الاصطناعي بقواعد بيانات المتجهات</a></td><td>الوكلاء</td><td>ميلفوس، MCP</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/openai_agents_milvus.md">تكامل ميلفوس مع وكلاء OpenAI: دليل خطوة بخطوة</a></td><td>الوكلاء</td><td>ميلفوس، OpenAI</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_ragas.md">تقييم RAG مع Ragas و Milvus</a></td><td>التقييم</td><td>ميلفوس، راغاس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/evaluation_with_deepeval.md">التقييم باستخدام DeepEval</a></td><td>التقييم والملاحظة</td><td>ميلفوس، ديب إيفال</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/evaluation_with_phoenix.md">التقييم باستخدام أريز فيونيكس</a></td><td>التقييم والملاحظة</td><td>ميلفوس، أريز فيونيكس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_langfuse.md">ميلفوس في لانجفيوز</a></td><td>قابلية الملاحظة</td><td>ميلفوس، لانجفيوز</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_openai.md">البحث الدلالي باستخدام ميلفوس و OpenAI</a></td><td>البحث الدلالي</td><td>ميلفوس، OpenAI</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_cohere.md">الإجابة عن الأسئلة باستخدام ميلفوس و Cohere</a></td><td>البحث الدلالي</td><td>ميلفوس، كوهير</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_hugging-face.md">الإجابة عن الأسئلة باستخدام Milvus وHuggingFace</a></td><td>الإجابة عن الأسئلة</td><td>ميلفوس، عناق الوجه</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_pytorch.md">البحث عن الصور باستخدام ميلفوس وبيتورش</a></td><td>البحث الدلالي</td><td>ميلفوس، بيتورش</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_sentencetransformers.md">البحث في الأفلام باستخدام Milvus و SentenceTransfromers</a></td><td>البحث الدلالي</td><td>ميلفوس وميلفوس وسنتنس ترانسفورمرز</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_voxel51.md">إجراء عمليات بحث دلالي باستخدام ميلفوس وفيفتيون</a></td><td>البحث الدلالي</td><td>ميلفوس، فيفتي ون</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_voyageai.md">البحث الدلالي باستخدام Milvus وVoyageAI</a></td><td>البحث الدلالي</td><td>ميلفوس، فوياج إيه آي</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_bentoml.md">البحث الدلالي باستخدام Milvus و BentoML</a></td><td>RAG</td><td>ميلفوس و BentoML</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_dspy.md">RAG مع Milvus و DSPy</a></td><td>RAG</td><td>ميلفوس، DSPy</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_jina.md">البحث الدلالي مع ميلفوس وجينا</a></td><td>البحث الدلالي</td><td>ميلفوس، جينا</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_snowpark.md">ميلفوس على خدمات حاويات سنوبارك</a></td><td>اتصال البيانات</td><td>ميلفوس، سنوبارك</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_whyhow.md">الاسترجاع المستند إلى القواعد مع ميلفوس و لماذا كيف</a></td><td>الإجابة على الأسئلة</td><td>ميلفوس، لماذا كيف</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_fastgpt.md">كيفية نشر FastGPT مع Milvus</a></td><td>RAG</td><td>ميلفوس، FastGPT</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_vanna.md">كتابة SQL مع فانا وميلفوس</a></td><td>RAG</td><td>ميلفوس وفانا</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_camel.md">RAG مع ميلفوس وجمل</a></td><td>RAG</td><td>ميلفوس، كاميل</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integrate_with_airbyte.md">Airbyte &amp; Milvus: بنية تحتية مفتوحة المصدر لنقل البيانات</a></td><td>اتصال البيانات</td><td>ميلفوس، إيربايت</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/video_search_with_twelvelabs_and_milvus.md">بحث الفيديو المتقدم: الاستفادة من مختبرات Twelve Labs و Milvus للاسترجاع الدلالي</a></td><td>البحث الدلالي</td><td>ميلفوس، تويلفيس لابز</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/kafka-connect-milvus.md">ربط كافكا مع ميلفوس</a></td><td>مصادر البيانات</td><td>ميلفوس، كافكا</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/kotaemon_with_milvus.md">Kotaemon RAG مع ميلفوس</a></td><td>RAG</td><td>ميلفوس، كوتيمون</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/apify_milvus_rag.md">التوليد المعزز للاسترجاع: الزحف إلى المواقع الإلكترونية باستخدام Apify وحفظ البيانات في ميلفوس للإجابة عن الأسئلة</a></td><td>مصادر البيانات</td><td>ميلفوس، أبيفاي</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_rag_on_arm.md">بناء RAG على بنية الذراع</a></td><td>RAG</td><td>ميلفوس، آرم</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_fireworks.md">بناء RAG باستخدام Milvus وFireworks AI</a></td><td>ذراع</td><td>ميلفوس، فايرووركس للذكاء الاصطناعي</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_lepton.md">بناء RAG مع ميلفوس وذكاء اصطناعي ليبتون</a></td><td>LLMs</td><td>ميلفوس، ليبتون للذكاء الاصطناعي</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_siliconflow.md">بناء RAG مع ميلفوس وسيليكون فلو</a></td><td>أجهزة LLMs</td><td>ميلفوس، سيليكون فلو</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/rag_with_milvus_and_unstructured.md">بناء RAG باستخدام Milvus وMilvus وLepton</a></td><td>مصادر البيانات</td><td>ميلفوس، غير المهيكلة</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/RAG_with_pii_and_milvus.md">بناء RAG باستخدام Milvus + قناع PII Masker</a></td><td>مصادر البيانات</td><td>ميلفوس، ماسك معلومات تحديد الهوية الشخصية</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/knowledge_table_with_milvus.md">جدول المعرفة مع ميلفوس</a></td><td>هندسة المعرفة</td><td>جدول المعرفة، ميلفوس</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_cognee.md">بناء RAG مع ميلفوس وكوجنيي</a></td><td>هندسة المعرفة</td><td>ميلفوس، كوجني</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_gemini.md">بناء RAG مع ميلفوس وجيميني</a></td><td>جدول المعرفة</td><td>ميلفوس، جيميني</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_ollama.md">بناء RAG مع ميلفوس وأولاما</a></td><td>ل.ل.م</td><td>ميلفوس، أولاما</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_deepseek.md">بناء RAG مع ميلفوس وديبسيك</a></td><td>LLMs</td><td>ميلفوس، ديبسيك</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_crawl4ai.md">بناء RAG باستخدام Milvus وCrawl4AI</a></td><td>مصادر البيانات</td><td>ميلفوس, Crawl4AI</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_firecrawl.md">بناء RAG باستخدام Milvus وFirecrawl</a></td><td>مصادر البيانات</td><td>ميلفوس، فايركراول</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/integration_with_mindsdb.md">دمج ميلفوس مع مايندز دي بي</a></td><td>هندسة المعرفة</td><td>ميلفوس، مايندز دي بي</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_feast.md">بناء RAG مع ميلفوس وفيست</a></td><td>مصادر البيانات</td><td>ميلفوس، وليمة</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_docling.md">بناء RAG باستخدام Milvus وDocling</a></td><td>مصادر البيانات</td><td>ميلفوس، دوكلينج</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/build_RAG_with_milvus_and_embedAnything.md">بناء RAG باستخدام Milvus و EmbedAnything</a></td><td>التضمين</td><td>ميلفوس، تضمين أي شيء</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/milvus_and_n8n.md">الشروع في العمل مع ميلفوس و n8n</a></td><td>التنسيق</td><td>ميلفوس، n8n</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/use_milvus_in_anythingllm.md">استخدام Milvus في AnythingLLM</a></td><td>التنسيق</td><td>ميلفوس، AnythingLLLM</td></tr>
<tr><td><a href="/docs/ar/v2.5.x/NLWeb_with_milvus.md">استخدام NLWeb مع ميلفوس</a></td><td>مصادر البيانات</td><td>ميلفوس، إن إل ويب</td></tr>
</tbody>
</table>
